Updated proto Merged with ca and registry
