# registry-client.go
@@ -8,7 +8,7 @@ import (
 	"github.com/zoenion/common/clone"
 	"github.com/zoenion/common/errors"
 	"github.com/zoenion/service/discovery"
-	"github.com/zoenion/service/proto"
+	pb2 "github.com/zoenion/service/proto"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/connectivity"
 	"google.golang.org/grpc/credentials"
@@ -18,32 +18,37 @@ import (
 )
 
 type RegistryEventHandler interface {
-	Handle(*proto.Event)
+	Handle(*pb2.Event)
 }
 
 type eventHandlerFunc struct {
-	f func(event *proto.Event)
+	f func(event *pb2.Event)
 }
 
-func (hf *eventHandlerFunc) Handle(event *proto.Event) {
+func (hf *eventHandlerFunc) Handle(event *pb2.Event) {
 	hf.f(event)
 }
 
-func EventHandlerFunc(f func(*proto.Event)) RegistryEventHandler {
+func EventHandlerFunc(f func(*pb2.Event)) RegistryEventHandler {
 	return &eventHandlerFunc{f: f}
 }
 
 type SyncedRegistry struct {
 	servicesLock sync.Mutex
 	handlersLock sync.Mutex
-	services     map[string]*proto.Info
-	client       proto.RegistryClient
+	services     map[string]*pb2.Info
+	client       pb2.RegistryClient
 
 	tlsConfig     *tls.Config
 	serverAddress string
 	stop          bool
 	conn          *grpc.ClientConn
 	eventHandlers map[string]discovery.RegistryEventHandler
+
+	keyCounter     int
+	listenersMutex sync.Mutex
+	listeners      map[int]chan *pb2.Event
+	eventHandler   func(*pb2.Event)
 }
 
 func (r *SyncedRegistry) Connect() error {
@@ -58,6 +63,7 @@ func (r *SyncedRegistry) Connect() error {
 	} else {
 		opts = append(opts, grpc.WithInsecure())
 	}
+	opts = append(opts, grpc.WithBackoffMaxDelay(time.Second))
 
 	attempt := 0
 	for !r.stop || r.conn != nil && r.conn.GetState() != connectivity.Ready {
@@ -66,7 +72,7 @@ func (r *SyncedRegistry) Connect() error {
 		r.conn, err = grpc.Dial(r.serverAddress, opts...)
 		if err != nil {
 			log.Printf("connection to registry server failed: %s\n", err)
-			<-time.After(time.Second * 3)
+			<-time.After(time.Second)
 			if attempt == 3 {
 				return fmt.Errorf("could not connect to server: %s", err)
 			}
@@ -75,7 +81,7 @@ func (r *SyncedRegistry) Connect() error {
 		}
 	}
 
-	r.client = proto.NewRegistryClient(r.conn)
+	r.client = pb2.NewRegistryClient(r.conn)
 	go r.connected()
 	return nil
 }
@@ -89,29 +95,29 @@ func (r *SyncedRegistry) Disconnect() error {
 	return nil
 }
 
-func (r *SyncedRegistry) Register(i *proto.Info) (string, error) {
+func (r *SyncedRegistry) RegisterService(i *pb2.Info) (string, error) {
 	err := r.Connect()
 	if err != nil {
 		return "", fmt.Errorf("could not connect to server: %s", err)
 	}
-	rsp, err := r.client.Register(context.Background(), &proto.RegisterRequest{Service: i})
+	rsp, err := r.client.Register(context.Background(), &pb2.RegisterRequest{Service: i})
 	if err != nil {
 		return "", err
 	}
 	return rsp.RegistryId, nil
 }
 
-func (r *SyncedRegistry) Deregister(id string) error {
+func (r *SyncedRegistry) DeregisterService(id string) error {
 	err := r.Connect()
 	if err != nil {
 		return fmt.Errorf("could not connect to server: %s", err)
 	}
 
-	_, err = r.client.Deregister(context.Background(), &proto.DeregisterRequest{RegistryId: id})
+	_, err = r.client.Deregister(context.Background(), &pb2.DeregisterRequest{RegistryId: id})
 	return err
 }
 
-func (r *SyncedRegistry) Get(id string) (*proto.Info, error) {
+func (r *SyncedRegistry) GetService(id string) (*pb2.Info, error) {
 	return r.get(id), nil
 }
 
@@ -131,16 +137,16 @@ func (r *SyncedRegistry) Certificate(id string) ([]byte, error) {
 	return nil, errors.NotFound
 }
 
-func (r *SyncedRegistry) ConnectionInfo(id string, protocol proto.Protocol) (*proto.ConnectionInfo, error) {
+func (r *SyncedRegistry) ConnectionInfo(id string, protocol pb2.Protocol) (*pb2.ConnectionInfo, error) {
 	r.servicesLock.Lock()
 	defer r.servicesLock.Unlock()
 
-	ci := new(proto.ConnectionInfo)
+	ci := new(pb2.ConnectionInfo)
 
 	for _, s := range r.services {
 		if id == fmt.Sprintf("%s.%s", s.Namespace, s.Name) {
-			var node *proto.Node
-			if protocol == proto.Protocol_Grpc {
+			var node *pb2.Node
+			if protocol == pb2.Protocol_Grpc {
 				node = s.ServiceNode
 			} else {
 				node = s.GatewayNode
@@ -172,21 +178,21 @@ func (r *SyncedRegistry) DeregisterEventHandler(hid string) {
 	delete(r.eventHandlers, hid)
 }
 
-func (r *SyncedRegistry) GetOfType(t proto.Type) ([]*proto.Info, error) {
+func (r *SyncedRegistry) GetOfType(t pb2.Type) ([]*pb2.Info, error) {
 	r.servicesLock.Lock()
 	defer r.servicesLock.Unlock()
 
-	var result []*proto.Info
+	var result []*pb2.Info
 	for _, s := range r.services {
 		if s.Type == t {
 			c := clone.New(s)
-			result = append(result, c.(*proto.Info))
+			result = append(result, c.(*pb2.Info))
 		}
 	}
 	return result, nil
 }
 
-func (r *SyncedRegistry) publishEvent(e proto.Event) {
+func (r *SyncedRegistry) publishEvent(e pb2.Event) {
 	r.handlersLock.Lock()
 	r.handlersLock.Unlock()
 
@@ -195,14 +201,26 @@ func (r *SyncedRegistry) publishEvent(e proto.Event) {
 	}
 }
 
-func (r *SyncedRegistry) get(name string) *proto.Info {
+func (r *SyncedRegistry) get(name string) *pb2.Info {
 	r.servicesLock.Lock()
 	defer r.servicesLock.Unlock()
 	info := r.services[name]
-	return clone.New(info).(*proto.Info)
+	return clone.New(info).(*pb2.Info)
 }
 
-func (r *SyncedRegistry) saveService(info *proto.Info) {
+func (r *SyncedRegistry) ofNamespace(namespace string) []*pb2.Info {
+	r.servicesLock.Lock()
+	defer r.servicesLock.Unlock()
+	var services []*pb2.Info
+	for _, s := range r.services {
+		if namespace == "" || s.Namespace == namespace {
+			services = append(services, clone.New(s).(*pb2.Info))
+		}
+	}
+	return services
+}
+
+func (r *SyncedRegistry) saveService(info *pb2.Info) {
 	r.servicesLock.Lock()
 	defer r.servicesLock.Unlock()
 	r.services[info.Namespace+":"+info.Name] = info
@@ -216,7 +234,7 @@ func (r *SyncedRegistry) deleteService(name string) {
 
 func (r *SyncedRegistry) connected() {
 	ctx := context.Background()
-	stream, err := r.client.Listen(ctx, &proto.ListenRequest{})
+	stream, err := r.client.Listen(ctx, &pb2.ListenRequest{})
 	if err != nil {
 		log.Printf("could not listen to registry server events: %s\n", err)
 		return
@@ -236,9 +254,9 @@ func (r *SyncedRegistry) connected() {
 		log.Printf("registry -> %s: %s\n", event.Type.String(), event.Name)
 
 		switch event.Type {
-		case proto.EventType_Updated, proto.EventType_Registered:
+		case pb2.EventType_Updated, pb2.EventType_Registered:
 			r.saveService(event.Info)
-		case proto.EventType_DeRegistered:
+		case pb2.EventType_DeRegistered:
 			r.deleteService(event.Name)
 		}
 	}
@@ -248,11 +266,18 @@ func (r *SyncedRegistry) disconnected() {
 	r.services = nil
 }
 
-func NewSyncRegistry(server string, tlsConfig *tls.Config) *SyncedRegistry {
+func NewSyncedRegistryClient(server string, tlsConfig *tls.Config) *SyncedRegistry {
 	return &SyncedRegistry{
-		services:      map[string]*proto.Info{},
+		services:      map[string]*pb2.Info{},
 		tlsConfig:     tlsConfig,
 		serverAddress: server,
+		eventHandlers: map[string]discovery.RegistryEventHandler{},
+	}
+}
+
+func NewSyncedRegistryServer() *SyncedRegistry {
+	return &SyncedRegistry{
+		services:      map[string]*pb2.Info{},
 		eventHandlers: map[string]discovery.RegistryEventHandler{},
 	}
 }
